<resources>
    <string name="app_name">SMessager</string>
    <string name="login_success">login success</string>
    <string name="waiting_for_network">Connecting…</string>
    <string name="login">LOGIN</string>
    <string name="Username">UserName</string>
    <string name="loginMessage">UserName/Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email_address">Email</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <!--注册页面表单校验-->
    <string name="password_repeat_password_not_same">Password And Repeat Password Not Same!</string>
    <string name="error_email_address">The Email Address is error!</string>
    <string name="empty_username">The UserName is not empty!</string>
    <string name="password_length_too_short">The password should be longer than six digits!</string>
    <string name="imei_permission">Please allow app to get imei!</string>
    <string name="register_success">Register Success! Please click the verify email link in your inbox before you log in!</string>
    <string name="http_failure">Http error! Please Check Your Network Status!</string>
    <string name="register_failure">Register failure! Error Message：</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="contacts">Contacts</string>
    <string name="setting">Settings</string>
    <string name="connection_lost">Connection Close!</string>
    <string name="user_info_error">User Info Error! Please Login Again!</string>
    <string name="new_chat">New Chat</string>
    <string name="seen_on">seen on</string>


    <!-- 录音 -->
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>
    <string name="waiting">Waiting for</string>
    <string name="get_online">to get online...</string>
    <string name="generate_my_code">Generate My Invite Code</string>
    <string name="input_friends_code">Input Code</string>
    <string name="input_code_hint">Please enter the four digits your friend gave you</string>
    <string name="generate_code_input">Please tell your friends to input the following four digits and the numbers have been automatically copied to the clipboard</string>
    <string name="message_voice">[Voice]</string>
    <string name="message_image">[Image]</string>
    <string name="gender">Gender</string>
    <string name="bio">Bio</string>
    <string name="save_data_mode">Save Data Mode</string>
    <string name="only_wifi_load_img">Automatically download only in WIFI</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="secret">Secret</string>
    <string name="open">Open</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="origin_password">Original Password</string>
    <string name="new_password">New Password</string>
    <string name="modify">Apply</string>
    <string name="origin_password_error">Origin Password Error</string>
    <string name="start_messaging">START MESSAGING</string>
</resources>
