<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_gender_secret"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/secret"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_gender_female"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/female"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_gender_male"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/male"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
