<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:textColorHint="#c5c5c5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_setting_password_original"
                    android:textColor="@color/black"
                    android:hint="@string/origin_password"
                    android:inputType="textPassword"
                    android:maxLength="140"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:text=""
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="#c5c5c5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_setting_password_new"
                    android:textColor="@color/black"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLength="140"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:text=""
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="#c5c5c5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_setting_password_repeat"
                    android:textColor="@color/black"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:maxLength="140"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:text=""
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="#c5c5c5"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/bt_setting_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:background="@drawable/bt_round_shape"
                    android:text="@string/modify"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>