<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_setting"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_tool_bar_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_avatar_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/bg"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_setting"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/light_gray"/>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fb_edit_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:tint="#797979"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.7"
        android:src="@drawable/create_grey"
        app:backgroundTint="#FFFFFF"
        app:layout_anchor="@id/app_bar_setting"
        app:layout_anchorGravity="center_vertical|end|bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f2f2"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!--电子邮箱-->
        <LinearLayout
            android:id="@+id/ll_item_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal"
            android:minHeight="?android:listPreferredItemHeight"
            android:padding="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/email_grey"
                android:layout_marginEnd="25dp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_setting_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:text="title"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_setting_title"
                    android:text="@string/email_address"
                    android:textColor="#AAAAAA"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="65dp"
            android:background="@color/light_gray"/>

        <!--性别-->
        <LinearLayout
            android:id="@+id/ll_item_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            android:minHeight="?android:listPreferredItemHeight"
            android:padding="16dp">
            <ImageView
                android:id="@+id/iv_gender_setting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/gender_man"
                android:layout_marginEnd="25dp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_setting_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:text="Male"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_setting_gender"
                    android:text="@string/gender"
                    android:textColor="#AAAAAA"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="65dp"
            android:background="@color/light_gray"/>

        <!--个人简介-->
        <LinearLayout
            android:id="@+id/ll_item_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            android:minHeight="?android:listPreferredItemHeight"
            android:padding="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/error_grey"
                android:layout_marginEnd="25dp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_setting_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:text="title"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_setting_bio"
                    android:text="@string/bio"
                    android:textColor="#AAAAAA"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="65dp"
            android:background="@color/light_gray"/>

        <!--修改密码-->
        <LinearLayout
            android:id="@+id/ll_change_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            android:minHeight="?android:listPreferredItemHeight"
            android:padding="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/lock_outline_grey"
                android:layout_marginEnd="25dp"/>
            <TextView
                android:id="@+id/tv_setting_change_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fadingEdge="horizontal"
                android:singleLine="true"
                android:textColor="#000"
                android:text="@string/change_password"
                android:textSize="16sp"/>
        </LinearLayout>

        <!--注销登录-->
        <Button
            android:id="@+id/bt_setting_logout"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bt_round_shape"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>